--- a/docs/guile-a-sync.texi
+++ b/docs/guile-a-sync.texi
@@ -11,7 +11,7 @@
 @end ifnottex
 
 This is the guile-a-sync library.  It provides both an asynchronous
-event loop for guile, and coroutines to enable an event loop
+event loop for guile-2.0, and coroutines to enable an event loop
 (including other event loops such as the glib event loop) to be used
 with 'await' semantics to deal with inversion of control -- otherwise
 known as ``callback hell''.
