--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -484,6 +484,8 @@ happen unless memory is exhausted or pthread has run out of resources.
 Exceptions arising during execution of the generator, if not caught by
 a handler procedure, will terminate the program.  Exceptions thrown by
 the handler procedure will propagate out of event-loop-run!.
+Exceptions thrown by 'proc', if not caught locally, will also
+propagate out of event-loop-run!.
 
 This procedure is first available in version 0.9 of this library.
 
@@ -551,6 +553,9 @@ setting up, which shouldn't happen unless memory is exhausted or
 pthread has run out of resources.  Exceptions arising during execution
 of the generator, if not caught locally, will propagate out of the
 event-loop-run! procedure called for the 'worker' event loop.
+Exceptions arising during the execution of 'proc', if not caught
+locally, will propagate out of the event-loop-run! procedure called
+for the 'waiter' or default event loop (as the case may be).
 
 This procedure is first available in version 0.9 of this library.
 
@@ -619,7 +624,8 @@ Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the task starts), which shouldn't happen
 unless memory is exhausted.  Exceptions arising during execution of
 the generator, if not caught locally, will propagate out of
-event-loop-run!.
+await-generator!.  Exceptions thrown by 'proc', if not caught locally,
+will propagate out of event-loop-run!.
 
 This procedure is first available in version 0.9 of this library.
 
@@ -863,7 +869,8 @@ Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
 shouldn't happen unless memory is exhausted.  Subsequent exceptions
 (say, because of port or conversion errors) will propagate out of
-event-loop-run!.
+event-loop-run!.  Exceptions thrown by 'proc', if not caught locally,
+will also propagate out of event-loop-run!.
 
 This procedure is available from version 0.3.  From version 0.6, the
 bytes comprising the input text will be converted to their string
@@ -937,7 +944,8 @@ Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
 shouldn't happen unless memory is exhausted.  Subsequent exceptions
 (say, because of port or conversion errors) will propagate out of
-event-loop-run!.
+event-loop-run!.  Exceptions thrown by 'proc', if not caught locally,
+will also propagate out of event-loop-run!.
 
 This procedure is available from version 0.4.  From version 0.6, the
 bytes comprising the input text will be converted to their string
