Provide await-glib-put-string procedure

--- a/docs/gnome-glib.texi
+++ b/docs/gnome-glib.texi
@@ -398,8 +398,10 @@ returned rather than an empty string).
 
 For the reasons explained in the documentation on
 a-sync-glib-read-watch, this procedure only works correctly if the
-port passed to the 'port' argument has buffering switched off.  This
-makes the procedure less useful than would otherwise be the case.
+port passed to the 'port' argument has buffering switched off (say by
+using the open-file, fdopen or duplicate-port procedure with the '0'
+mode option, or by calling setvbuf).  This makes the procedure less
+useful than would otherwise be the case.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the default glib main loop runs.
@@ -477,4 +479,83 @@ This procedure should not throw an exception unless memory is
 exhausted, or guile-glib throws for some other reason.  If 'proc'
 throws, say because of port errors, and the exception is not caught
 locally, it will propagate out of g-main-loop-run.
+
+As an example of how to use a-sync-glib-write-watch, here is the
+implementation of await-glib-put-string:
+@example
+(define (await-glib-put-string await resume port text)
+  (define length (string-length text))
+  (define index 0)
+  (define bv
+    (let ((encoding (or (port-encoding port)
+			(fluid-ref %default-port-encoding)
+			"ISO-8859-1"))
+	  (conversion-strategy (port-conversion-strategy port)))
+      (iconv:string->bytevector text encoding conversion-strategy)))
+  (define id (a-sync-glib-write-watch resume
+				      (port->fdes port)
+				      (lambda (ioc status)
+					(catch 'system-error
+					  (lambda ()
+					    (let next ()
+					      (if (= index length)
+						  #f
+						  (begin
+						    (put-u8 port (bytevector-u8-ref bv index))
+						    (set! index (1+ index))
+						    (next)))))
+					  (lambda args
+					    (if (or (= EAGAIN (system-error-errno args))
+						    (and (defined? 'EWOULDBLOCK) 
+							 (= EWOULDBLOCK (system-error-errno args))))
+						'more
+						(apply throw args)))))))
+  (let next ((res (await)))
+    (if (eq? res 'more)
+	(next (await))
+	(begin
+	  (g-source-remove id)
+	  (release-port-handle port)))))
+@end example
+@end deffn
+
+@deffn {Scheme Procedure} await-glib-put-string await resume port text
+This is a convenience procedure which will start a write watch on
+'port' for writing a string to the port.  It calls 'await' while
+waiting for output to become available.  Provided 'port' is a
+non-blocking port, the event loop will not be blocked by this
+procedure even if only individual characters can be written at any one
+time.  It is intended to be called in a waitable procedure invoked by
+a-sync, and this procedure is implemented using
+a-sync-glib-write-watch.
+
+'port' must be a non-blocking port, or this procedure may block the
+event loop when writing.  In addition, it should be unbuffered (say by
+using the open-file, fdopen or duplicate-port procedure with the '0'
+mode option, or by calling setvbuf), or any buffer flushing operation
+may also block.
+
+This procedure must (like the a-sync procedure) be called in the same
+thread as that in which the event loop runs.
+
+Exceptions may propagate out of this procedure if they arise while
+setting up (that is, before the first call to 'await' is made), which
+shouldn't happen unless memory is exhausted or a conversion error is
+encountered.  Subsequent exceptions (say, because of port errors) will
+propagate out of event-loop-run!.
+
+The bytes to be sent will be converted from the passed in string
+representation using the encoding of 'port' if a port encoding has
+been set, or otherwise using the program's default port encoding, or
+if neither has been set using iso-8859-1 (Latin-1).  Exceptions from
+conversion errors will propagate out of this procedure when setting up
+if conversion fails and a conversion strategy of 'error is in effect.
+This procedure uses the conversion strategy for 'port' (which defaults
+at program start-up to 'substitute).
+
+If CR-LF line endings are to be written when outputting the string,
+the '\r' character (as well as the '\n' character) must be embedded in
+the string.
+
+This procedure is first available in version 0.10 of this library.
 @end deffn
