--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -1039,14 +1039,14 @@ implementation of await-put-string!:
   (case-lambda
     ((await resume port text) (await-put-string! await resume #f port text))
     ((await resume loop port text)
-     (define length (string-length text))
      (define index 0)
      (define bv
        (let ((encoding (or (port-encoding port)
-       			   (fluid-ref %default-port-encoding)
+			   (fluid-ref %default-port-encoding)
 			   "ISO-8859-1"))
 	     (conversion-strategy (port-conversion-strategy port)))
 	 (iconv:string->bytevector text encoding conversion-strategy)))
+     (define length (bytevector-length bv))
      (a-sync-write-watch! resume
 			  port
 			  (lambda (status)
