--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -1033,57 +1033,54 @@ exception is not caught locally, it will propagate out of
 event-loop-run!.
 
 As an example of how to use a-sync-write-watch!, here is the
-implementation of await-put-string!:
+implementation of await-put-bytevector!:
 @example
-(define await-put-string! 
+(define await-put-bytevector! 
   (case-lambda
-    ((await resume port text) (await-put-string! await resume #f port text))
-    ((await resume loop port text)
-     (define index 0)
-     (define bv
-       (let ((encoding (or (port-encoding port)
-			   (fluid-ref %default-port-encoding)
-			   "ISO-8859-1"))
-	     (conversion-strategy (port-conversion-strategy port)))
-	 (iconv:string->bytevector text encoding conversion-strategy)))
+    ((await resume port bv) (await-put-bytevector! await resume #f port bv))
+    ((await resume loop port bv)
      (define length (bytevector-length bv))
-     (a-sync-write-watch! resume
-			  port
-			  (lambda (status)
-			    (if (eq? status 'excpt)
-				#f
-				(catch 'system-error
-				  (lambda ()
-				    (let next ()
-				      (if (= index length)
-					  #t
-					  (begin
-					    (put-u8 port (bytevector-u8-ref bv index))
-					    (set! index (1+ index))
-					    (next)))))
-				  (lambda args
-				    (if (or (= EAGAIN (system-error-errno args))
-					    (and (defined? 'EWOULDBLOCK) 
-						 (= EWOULDBLOCK (system-error-errno args))))
-					'more
-					(apply throw args))))))
-			  loop)
-     (let next ((res (await)))
-       (if (eq? res 'more)
-	   (next (await))
-	   (begin
-	     (event-loop-remove-write-watch! port loop)
-	     res))))))
+     (define index 0)
+     (_throw-exception-if-regular-file (fileno port))
+
+     (let ((fd (port->fdes port)))
+       (a-sync-write-watch! resume
+			    fd
+			    (lambda (status)
+			      (catch #t
+				(lambda ()
+				  (if (eq? status 'excpt)
+				      #f
+				      (begin
+					(set! index (+ index (c-write fd
+								      bv
+								      index
+								      (- length index))))
+					(if (< index length)
+					    'more
+					    #t))))
+				(lambda args
+				  (release-port-handle port)
+				  (apply throw args))))
+			    loop)
+       (let next ((res (await)))
+	 (if (eq? res 'more)
+	     (next (await))
+	     (begin
+	       (event-loop-remove-write-watch! fd loop)
+	       (release-port-handle port)
+	       res)))))))
 @end example
 @end deffn
 
-@deffn {Scheme Procedure} await-put-string! await resume [loop] port text
+@deffn {Scheme Procedure} await-put-bytevector! await resume [loop] port bv
 This is a convenience procedure for use in an event loop, which will
-start a write watch on 'port' for writing a string to the port.  It
-calls 'await' while waiting for output to become available.  Provided
-'port' is a non-blocking port, the event loop will not be blocked by
-this procedure even if only individual characters can be written at
-any one time.  It is intended to be called in a waitable procedure
+start a write watch on 'port' for writing the contents of a bytevector
+'bv' to the port.  It calls 'await' while waiting for output to become
+available.  The event loop will not be blocked by this procedure even
+if only individual bytes can be written at any one time (although if
+'port' references a socket, it should be non-blocking for this to be
+guaranteed).  It is intended to be called in a waitable procedure
 invoked by a-sync, and this procedure is implemented using
 a-sync-write-watch!.  If an exceptional condition ('excpt) is
 encountered, #f will be returned, otherwise #t will be returned (but
@@ -1092,30 +1089,93 @@ port).  The 'loop' argument is optional: this procedure operates on
 the event loop passed in as an argument, or if none is passed (or #f
 is passed), on the default event loop.
 
-'port' must be a non-blocking port, or this procedure may block the
-event loop when writing.  It can be made non-blocking with this:
+A port can be made non-blocking with this:
 
 @example
 (fcntl [port] F_SETFL (logior O_NONBLOCK
                       (fcntl [port] F_GETFL)))
 @end example
 
-In addition, it should be unbuffered (say by using the open-file,
-fdopen or duplicate-port procedure with the '0' mode option, or by
-calling setvbuf), or any buffer flushing operation may also block.  In
-consequence, if a lot of text is to be passed, it may be worth
-checking whether using conventional buffered blocking output in a task
-started by await-task-in-thread!  or await-task-in-event-loop! offers
-better performance.
+For reasons of efficiency, this procedure by-passes the port's output
+buffer and sends the output to the underlying file descriptor
+directly.  This means that it is most convenient for use with
+unbuffered ports.  However, where the port must be an input-output
+port (say it represents a socket) and it is desirable that the input
+is buffered (as it usually is), this procedure can be used with a port
+with buffered output.  However, if that is done and the port has
+previously been used for output by a procedure other than c-write or
+an await-put* procedure, then it should be flushed before this
+procedure is called.
+
+This procedure will throw a 'c-write-error exception if passed a
+regular file with a file position pointer: there should be no need to
+use this procedure with regular files, because they cannot normally
+block on write and are always signalled as ready.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted or a conversion error is
-encountered.  Subsequent exceptions (say, because of port errors) will
-propagate out of event-loop-run!.
+shouldn't happen unless memory is exhausted or a regular file is
+passed to this procedure.  Subsequent exceptions (say, because of port
+errors) will propagate out of event-loop-run!.
+
+This procedure is first available in version 0.11 of this library.
+
+An example of the use of await-put-string!, which is implemented using
+this procedure, can be found in the example-socket.scm file in the
+docs directory.
+@end deffn
+
+@deffn {Scheme Procedure} await-put-string! await resume [loop] port text
+This is a convenience procedure for use in an event loop, which will
+start a write watch on 'port' for writing a string to the port.  It
+calls 'await' while waiting for output to become available.  The event
+loop will not be blocked by this procedure even if only individual
+characters or part characters can be written at any one time (although
+if 'port' references a socket, it should be non-blocking for this to
+be guaranteed).  It is intended to be called in a waitable procedure
+invoked by a-sync, and this procedure is implemented using
+await-put-bytevector!.  If an exceptional condition ('excpt) is
+encountered, #f will be returned, otherwise #t will be returned (but
+an exceptional condition should never be encountered on an output
+port).  The 'loop' argument is optional: this procedure operates on
+the event loop passed in as an argument, or if none is passed (or #f
+is passed), on the default event loop.
+
+A port can be made non-blocking with this:
+
+@example
+(fcntl [port] F_SETFL (logior O_NONBLOCK
+                      (fcntl [port] F_GETFL)))
+@end example
+
+For reasons of efficiency, this procedure by-passes the port's output
+buffer and sends the output to the underlying file descriptor
+directly.  This means that it is most convenient for use with
+unbuffered ports.  However, where the port must be an input-output
+port (say it represents a socket) and it is desirable that the input
+is buffered (as it usually is), this procedure can be used with a port
+with buffered output.  However, if that is done and the port has
+previously been used for output by a procedure other than c-write or
+an await-put* procedure, then it should be flushed before this
+procedure is called.
+
+This procedure will throw a 'c-write-error exception if passed a
+regular file with a file position pointer: there should be no need to
+use this procedure with regular files, because they cannot normally
+block on write and are always signalled as ready.
+
+This procedure must (like the a-sync procedure) be called in the same
+thread as that in which the event loop runs.
+
+Exceptions may propagate out of this procedure if they arise while
+setting up (that is, before the first call to 'await' is made), which
+shouldn't happen unless memory is exhausted, a conversion error is
+encountered or a regular file is passed to this procedure.  Subsequent
+exceptions (say, because of port errors) will propagate out of
+event-loop-run!.
 
 The bytes to be sent will be converted from the passed in string
 representation using the encoding of 'port' if a port encoding has
@@ -1134,6 +1194,37 @@ This procedure is first available in version 0.10 of this library.
 
 An example of the use of this procedure can be found in the
 example-socket.scm file in the docs directory.
+@end deffn
+
+@deffn {Scheme Procedure} c-write fd bv begin count
+This procedure is used by await-put-bytevector! (and so by
+await-put-string!) and is exported by event-loop.scm so that it can be
+used by other asynchronous procedures.  It makes a block write
+directly to output, bypassing any output buffers, using unix write.
+It is intended for use with asynchronous procedures which write blocks
+of data, to enable them to do so efficiently.
+
+This procedure provides a 'begin' parameter indicating the start of
+the sequence of bytes to be written, as an index.  'fd' is the file
+descriptor of the device to be written to, and it should be
+non-blocking.  'bv' is a bytevector containing the bytes to be
+written.  'count' is the maximum number of bytes to be written.
+Because this procedure is intended for use with non-blocking ports, it
+may write less than 'count' bytes: only the number of bytes available
+to the device to be written to will be written at any one time.  The
+sum of 'begin' and 'count' must not be more than the length of the
+bytevector.  The use of a separate 'begin' index enables the same
+bytevector to be written from repeatedly until all of it has been
+sent.
+
+Provided 'fd' is non-blocking, this procedure returns immediately with
+the number of bytes written (so 0 is returned if the file descriptor
+is not available for writing because the device is full).  On a write
+error other than EAGAIN, EWOULDBLOCK or EINTR, a 'c-write-error
+exception is thrown and errno is given as an argument to the exception
+handler.  EINTR is handled internally and is not an error.
+
+This procedure is first available in version 0.11 of this library.
 @end deffn
 
 The (a-sync event-loop) module also loads the @ref{monotonic
