Provide await-get*block! procedures for binary data

--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -805,9 +805,11 @@ This is a convenience procedure for use with an event loop, which will
 start a read watch on 'port' for a line of input.  It calls 'await'
 while waiting for input and will return the line of text received
 (without the terminating '\n' character).  The event loop will not be
-blocked by this procedure even if only individual characters are
-available at any one time.  It is intended to be called in a waitable
-procedure invoked by a-sync, and this procedure is implemented using
+blocked by this procedure even if only individual characters or part
+characters are available at any one time (although if 'port'
+references a socket, it should be non-blocking for this to be
+guaranteed).  It is intended to be called in a waitable procedure
+invoked by a-sync, and this procedure is implemented using
 a-sync-read-watch!.  If an exceptional condition ('excpt) is
 encountered, #f will be returned.  If an end-of-file object is
 encountered which terminates a line of text, a string containing the
@@ -817,6 +819,13 @@ returned rather than an empty string).  The 'loop' argument is
 optional: this procedure operates on the event loop passed in as an
 argument, or if none is passed (or #f is passed), on the default event
 loop.
+
+A port can be made non-blocking with this:
+
+@example
+(fcntl [port] F_SETFL (logior O_NONBLOCK
+                      (fcntl [port] F_GETFL)))
+@end example
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
@@ -866,14 +875,23 @@ of text received (without the terminating '\n' character).  'proc'
 should be a procedure taking a string as its only argument.
 
 The event loop will not be blocked by this procedure even if only
-individual characters are available at any one time.  It is intended
-to be called in a waitable procedure invoked by a-sync, and this
-procedure is implemented using a-sync-read-watch!.  Unlike the
-await-getline! procedure, the watch will continue after a line of text
-has been received in order to receive further lines.  The watch will
-not end until end-of-file or an exceptional condition ('excpt) is
-reached.  In the event of that happening, this procedure will end and
-return an end-of-file object or #f respectively.
+individual characters or part characters are available at any one time
+(although if 'port' references a socket, it should be non-blocking for
+this to be guaranteed).  It is intended to be called in a waitable
+procedure invoked by a-sync, and this procedure is implemented using
+a-sync-read-watch!.  Unlike the await-getline! procedure, the watch
+will continue after a line of text has been received in order to
+receive further lines.  The watch will not end until end-of-file or an
+exceptional condition ('excpt) is reached.  In the event of that
+happening, this procedure will end and return an end-of-file object or
+#f respectively.
+
+A port can be made non-blocking with this:
+
+@example
+(fcntl [port] F_SETFL (logior O_NONBLOCK
+                      (fcntl [port] F_GETFL)))
+@end example
 
 The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
@@ -941,14 +959,22 @@ string as the first argument containing the line of text read, and an
 escape continuation as its second.
 
 The event loop will not be blocked by this procedure even if only
-individual characters are available at any one time.  It is intended
-to be called in a waitable procedure invoked by a-sync.  This
-procedure is implemented using a-sync-read-watch!.  The watch will not
-end until end-of-file or an exceptional condition ('excpt) is reached,
-which would cause this procedure to end and return an end-of-file
-object or #f respectively, or until the escape continuation is
-invoked, in which case the value passed to the escape continuation
-will be returned.
+individual characters or part characters are available at any one time
+(although if 'port' references a socket, it should be non-blocking for
+this to be guaranteed).  It is intended to be called in a waitable
+procedure invoked by a-sync.  This procedure is implemented using
+a-sync-read-watch!.  The watch will not end until end-of-file or an
+exceptional condition ('excpt) is reached, which would cause this
+procedure to end and return an end-of-file object or #f respectively,
+or until the escape continuation is invoked, in which case the value
+passed to the escape continuation will be returned.
+
+A port can be made non-blocking with this:
+
+@example
+(fcntl [port] F_SETFL (logior O_NONBLOCK
+                      (fcntl [port] F_GETFL)))
+@end example
 
 The 'loop' argument is optional: this procedure operates on the event
 loop passed in as an argument, or if none is passed (or #f is passed),
@@ -999,6 +1025,153 @@ Here is an example of the use of await-getsomelines!:
 						  line))))))
 (event-loop-run!)
 @end example
+@end deffn
+
+@deffn {Scheme Procedure} await-getblock! await resume [loop] port size
+This is a convenience procedure for use with an event loop, which will
+start a read watch on 'port' for a block of data, such as a binary
+record, of size 'size'.  It calls 'await' while waiting for input and
+will return a pair, normally comprising as its car a bytevector of
+length 'size' containing the data, and as its cdr the number of bytes
+received (which will be the same as 'size' unless an end-of-file
+object was encountered part way through receiving the data).  The
+event loop will not be blocked by this procedure even if only
+individual bytes are available at any one time (although if 'port'
+references a socket, it should be non-blocking for this to be
+guaranteed).  It is intended to be called in a waitable procedure
+invoked by a-sync.  This procedure is implemented using
+a-sync-read-watch!.
+
+If an exceptional condition ('excpt) is encountered, a pair comprising
+(#f . 'f) will be returned.  As mentioned above, if an end-of-file
+object is encountered after receipt of some but not 'size' bytes, then
+a bytevector of length 'size' will be returned as car and the actual
+(lesser) number of bytes inserted in it as cdr.  If an end-of-file
+object is encountered without any bytes of data, a pair with
+eof-object as car and #f as cdr will be returned.
+
+A port can be made non-blocking with this:
+
+@example
+(fcntl [port] F_SETFL (logior O_NONBLOCK
+                      (fcntl [port] F_GETFL)))
+@end example
+
+The 'loop' argument is optional: this procedure operates on the event
+loop passed in as an argument, or if none is passed (or #f is passed),
+on the default event loop.
+
+This procedure must (like the a-sync procedure) be called in the same
+thread as that in which the event loop runs.
+
+Exceptions may propagate out of this procedure if they arise while
+setting up (that is, before the first call to 'await' is made), which
+shouldn't happen unless memory is exhausted.  Subsequent exceptions
+(say, because of port errors) will propagate out of event-loop-run!.
+
+This procedure is first available in version 0.11 of this library.
+@end deffn
+
+@deffn {Scheme Procedure} await-geteveryblock! await resume [loop] port size proc
+This is a convenience procedure for use with an event loop, which will
+start a read watch on 'port' for blocks of data, such as binary
+records, of size 'size'.  It calls 'await' while waiting for input and
+will apply 'proc' to any block of data received.  'proc' should be a
+procedure taking two arguments, first a bytevector of length 'size'
+containing the block of data read and second the size of the block of
+data placed in the bytevector.  The value passed as the size of the
+block of data placed in the bytevector will always be the same as
+'size' unless end-of-file has been encountered after receiving only a
+partial block of data.
+
+The event loop will not be blocked by this procedure even if only
+individual bytes are available at any one time (although if 'port'
+references a socket, it should be non-blocking for this to be
+guaranteed).  It is intended to be called in a waitable procedure
+invoked by a-sync.  This procedure is implemented using
+a-sync-read-watch!.  Unlike the await-getblock! procedure, the watch
+will continue after a complete block of data has been received in
+order to receive further blocks.  The watch will not end until
+end-of-file or an exceptional condition ('excpt) is reached.  In the
+event of that happening, this procedure will end and return an
+end-of-file object or #f respectively.
+
+A port can be made non-blocking with this:
+
+@example
+(fcntl [port] F_SETFL (logior O_NONBLOCK
+                      (fcntl [port] F_GETFL)))
+@end example
+
+The 'loop' argument is optional: this procedure operates on the event
+loop passed in as an argument, or if none is passed (or #f is passed),
+on the default event loop.
+
+This procedure must (like the a-sync procedure) be called in the same
+thread as that in which the event loop runs.
+
+Exceptions may propagate out of this procedure if they arise while
+setting up (that is, before the first call to 'await' is made), which
+shouldn't happen unless memory is exhausted.  Subsequent exceptions
+(say, because of port errors) will propagate out of event-loop-run!.
+Exceptions raised by 'proc', if not caught locally, will also
+propagate out of event-loop-run!.
+
+This procedure is first available in version 0.11 of this library.
+@end deffn
+
+@deffn {Scheme Procedure} await-getsomeblocks! await resume [loop] port size proc
+This is a convenience procedure for use with an event loop, which does
+the same as await-geteveryblock!, except that it provides a third
+argument to 'proc', namely an escape continuation which can be invoked
+by 'proc' to cause the procedure to return before end-of-file is
+reached.  Behavior is identical to await-geteveryblock! if the
+continuation is not invoked.
+
+This procedure will start a read watch on 'port' for blocks of data,
+such as binary records, of size 'size'.  It calls 'await' while
+waiting for input and will apply 'proc' to any block of data received.
+'proc' should be a procedure taking three arguments, first a
+bytevector of length 'size' containing the block of data read, second
+the size of the block of data placed in the bytevector and third an
+escape continuation.  The value passed as the size of the block of
+data placed in the bytevector will always be the same as 'size' unless
+end-of-file has been encountered after receiving only a partial block
+of data.
+
+The event loop will not be blocked by this procedure even if only
+individual bytes are available at any one time (although if 'port'
+references a socket, it should be non-blocking for this to be
+guaranteed).  It is intended to be called in a waitable procedure
+invoked by a-sync.  This procedure is implemented using
+a-sync-read-watch!.  The watch will not end until end-of-file or an
+exceptional condition ('excpt) is reached, which would cause this
+procedure to end and return an end-of-file object or #f respectively,
+or until the escape continuation is invoked, in which case the value
+passed to the escape continuation will be returned.
+
+A port can be made non-blocking with this:
+
+@example
+(fcntl [port] F_SETFL (logior O_NONBLOCK
+                      (fcntl [port] F_GETFL)))
+@end example
+
+The 'loop' argument is optional: this procedure operates on the event
+loop passed in as an argument, or if none is passed (or #f is passed),
+on the default event loop.
+
+This procedure must (like the a-sync procedure) be called in the same
+thread as that in which the event loop runs.
+
+Exceptions may propagate out of this procedure if they arise while
+setting up (that is, before the first call to 'await' is made), which
+shouldn't happen unless memory is exhausted.  Subsequent exceptions
+(say, because of port errors) will propagate out of event-loop-run!.
+Exceptions raised by 'proc', if not caught locally, will also
+propagate out of event-loop-run!.
+
+This procedure is first available in version 0.11 of this library.
 @end deffn
 
 @deffn {Scheme Procedure} a-sync-write-watch! resume file proc [loop]
