--- a/docs/gnome-glib.texi
+++ b/docs/gnome-glib.texi
@@ -388,13 +388,15 @@ will start a read watch on 'port' for a line of input.  It calls
 'await' while waiting for input and will return the line of text
 received (without the terminating '\n' character).  The event loop
 will not be blocked by this procedure even if only individual
-characters are available at any one time.  It is intended to be called
-in a waitable procedure invoked by a-sync, and this procedure is
-implemented using a-sync-glib-read-watch.  If an end-of-file object is
-encountered which terminates a line of text, a string containing the
-line of text will be returned (and from version 0.3, if an end-of-file
-object is encountered without any text, the end-of-file object is
-returned rather than an empty string).
+characters or part characters are available at any one time (although
+if 'port' references a socket, it should be non-blocking for this to
+be guaranteed).  It is intended to be called in a waitable procedure
+invoked by a-sync, and this procedure is implemented using
+a-sync-glib-read-watch.  If an end-of-file object is encountered which
+terminates a line of text, a string containing the line of text will
+be returned (and from version 0.3, if an end-of-file object is
+encountered without any text, the end-of-file object is returned
+rather than an empty string).
 
 For the reasons explained in the documentation on
 a-sync-glib-read-watch, this procedure only works correctly if the
@@ -481,68 +483,108 @@ throws, say because of port errors, and the exception is not caught
 locally, it will propagate out of g-main-loop-run.
 
 As an example of how to use a-sync-glib-write-watch, here is the
-implementation of await-glib-put-string:
+implementation of await-glib-put-bytevector:
 @example
-(define (await-glib-put-string await resume port text)
+(define (await-glib-put-bytevector await resume port bv)
   (define index 0)
-  (define bv
-    (let ((encoding (or (port-encoding port)
-			(fluid-ref %default-port-encoding)
-			"ISO-8859-1"))
-	  (conversion-strategy (port-conversion-strategy port)))
-      (iconv:string->bytevector text encoding conversion-strategy)))
   (define length (bytevector-length bv))
-  (define id (a-sync-glib-write-watch resume
-				      (port->fdes port)
-				      (lambda (ioc status)
-					(catch 'system-error
-					  (lambda ()
-					    (let next ()
-					      (if (= index length)
-						  #f
-						  (begin
-						    (put-u8 port (bytevector-u8-ref bv index))
-						    (set! index (1+ index))
-						    (next)))))
-					  (lambda args
-					    (if (or (= EAGAIN (system-error-errno args))
-						    (and (defined? 'EWOULDBLOCK) 
-							 (= EWOULDBLOCK (system-error-errno args))))
-						'more
-						(apply throw args)))))))
-  (let next ((res (await)))
-    (if (eq? res 'more)
-	(next (await))
-	(begin
-	  (g-source-remove id)
-	  (release-port-handle port)))))
+  (define fd (fileno port))
+  (_throw-exception-if-regular-file fd)
+  (letrec ((id (a-sync-glib-write-watch resume
+					(port->fdes port)
+					(lambda (ioc status)
+					  (catch #t
+					    (lambda ()
+					      (set! index (+ index (c-write fd
+									    bv
+									    index
+									    (- length index))))
+					      (if (< index length)
+						  'more
+						  #f))
+					    (lambda args
+					      (g-source-remove id)
+					      (release-port-handle port)
+					      (apply throw args)))))))
+    (let next ((res (await)))
+      (if (eq? res 'more)
+	  (next (await))
+	  (begin
+	    (g-source-remove id)
+	    (release-port-handle port))))))
 @end example
 @end deffn
 
-@deffn {Scheme Procedure} await-glib-put-string await resume port text
+@deffn {Scheme Procedure} await-glib-put-bytevector await resume port bv
 This is a convenience procedure which will start a write watch on
-'port' for writing a string to the port.  It calls 'await' while
-waiting for output to become available.  Provided 'port' is a
-non-blocking port, the event loop will not be blocked by this
-procedure even if only individual characters can be written at any one
-time.  It is intended to be called in a waitable procedure invoked by
-a-sync, and this procedure is implemented using
-a-sync-glib-write-watch.
+'port' for writing the contents of a bytevector 'bv' to the port.  It
+calls 'await' while waiting for output to become available.  The event
+loop will not be blocked by this procedure even if only individual
+bytes can be written at any one time (although if 'port' references a
+socket, it should be non-blocking for this to be guaranteed).  It is
+intended to be called in a waitable procedure invoked by a-sync, and
+this procedure is implemented using a-sync-glib-write-watch.
 
-'port' must be a non-blocking port, or this procedure may block the
-event loop when writing.  In addition, it should be unbuffered (say by
-using the open-file, fdopen or duplicate-port procedure with the '0'
-mode option, or by calling setvbuf), or any buffer flushing operation
-may also block.
+For reasons of efficiency, this procedure by-passes the port's output
+buffer (if any) and sends the output to the underlying file descriptor
+directly.  This means that it is most convenient for use with
+unbuffered ports.  However, this procedure can be used with a port
+with buffered output, but if that is done and the port has previously
+been used for output by a procedure other than c-write or an
+await-glib-put* procedure, then it should be flushed before this
+procedure is called.  Such flushing might block.
+
+This procedure will throw a 'c-write-error exception if passed a
+regular file with a file position pointer: there should be no need to
+use this procedure with regular files, because they cannot normally
+block on write and are always signalled as ready.
 
 This procedure must (like the a-sync procedure) be called in the same
 thread as that in which the event loop runs.
 
 Exceptions may propagate out of this procedure if they arise while
 setting up (that is, before the first call to 'await' is made), which
-shouldn't happen unless memory is exhausted or a conversion error is
-encountered.  Subsequent exceptions (say, because of port errors) will
-propagate out of event-loop-run!.
+shouldn't happen unless memory is exhausted or a regular file is
+passed to this procedure.  Subsequent exceptions (say, because of port
+errors) will propagate out of g-main-loop-run.
+
+This procedure is first available in version 0.11 of this library.
+@end deffn
+
+@deffn {Scheme Procedure} await-glib-put-string await resume port text
+This is a convenience procedure which will start a write watch on
+'port' for writing a string to the port.  It calls 'await' while
+waiting for output to become available.  The event loop will not be
+blocked by this procedure even if only individual characters or part
+characters can be written at any one time (although if 'port'
+references a socket, it should be non-blocking for this to be
+guaranteed).  It is intended to be called in a waitable procedure
+invoked by a-sync, and this procedure is implemented using
+await-glib-put-bytevector.
+
+For reasons of efficiency, this procedure by-passes the port's output
+buffer (if any) and sends the output to the underlying file descriptor
+directly.  This means that it is most convenient for use with
+unbuffered ports.  However, this procedure can be used with a port
+with buffered output, but if that is done and the port has previously
+been used for output by a procedure other than c-write or an
+await-glib-put* procedure, then it should be flushed before this
+procedure is called.  Such flushing might block.
+
+This procedure will throw a 'c-write-error exception if passed a
+regular file with a file position pointer: there should be no need to
+use this procedure with regular files, because they cannot normally
+block on write and are always signalled as ready.
+
+This procedure must (like the a-sync procedure) be called in the same
+thread as that in which the event loop runs.
+
+Exceptions may propagate out of this procedure if they arise while
+setting up (that is, before the first call to 'await' is made), which
+shouldn't happen unless memory is exhausted, a conversion error is
+encountered or a regular file is passed to this procedure.  Subsequent
+exceptions (say, because of port errors) will propagate out of
+g-main-loop-run.
 
 The bytes to be sent will be converted from the passed in string
 representation using the encoding of 'port' if a port encoding has
