--- a/docs/event-loop.texi
+++ b/docs/event-loop.texi
@@ -1278,7 +1278,7 @@ is buffered (as it usually is), this procedure can be used with a port
 with buffered output.  However, if that is done and the port has
 previously been used for output by a procedure other than c-write or
 an await-put* procedure, then it should be flushed before this
-procedure is called.
+procedure is called.  Such flushing might block.
 
 This procedure will throw a 'c-write-error exception if passed a
 regular file with a file position pointer: there should be no need to
@@ -1333,7 +1333,7 @@ is buffered (as it usually is), this procedure can be used with a port
 with buffered output.  However, if that is done and the port has
 previously been used for output by a procedure other than c-write or
 an await-put* procedure, then it should be flushed before this
-procedure is called.
+procedure is called.  Such flushing might block.
 
 This procedure will throw a 'c-write-error exception if passed a
 regular file with a file position pointer: there should be no need to
