--- a/docs/guile-a-sync.texi
+++ b/docs/guile-a-sync.texi
@@ -22,7 +22,8 @@ General overview
 
 Modules
 * coroutines::     (a-sync coroutines) module - provides coroutines for await semantics on asynchronous events
-* event loop::     (a-sync event-loop) module - provides an event loop for asynchronous events
+* event loop::     (a-sync event-loop) module - provides an event loop for asynchronous events, with asynchonous procedures
+* sockets::        (a-sync sockets) module - provides asychonous procedures for sockets
 * monotonic time:: (a-sync monotonic-time) module - enables monotonic time to be used for timeouts
 * gnome glib::     (a-sync gnome-glib) module - provides some convenience await procedures for the glib main loop
 * compose::        (a-sync compose) module - provides the compose-a-sync macro interface for the a-sync coroutine
@@ -31,6 +32,7 @@ Modules
 @include overview.texi
 @include coroutines.texi
 @include event-loop.texi
+@include sockets.texi
 @include monotonic-time.texi
 @include gnome-glib.texi
 @include compose.texi
